Fixed severe bug on ios for navbar not opening

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -181,6 +181,7 @@ nav {
     border: none;
     position: absolute;
     right: 0;
+    cursor: pointer;
     margin-right: 2rem;
     background: url('../src/img/menu.png') no-repeat center;
   }
